# stock-ticker-streams-demo

./: README.md  presentation.md
images/: udp_architecture.d2
itchy-redis-transmitter/: .gitignore  Cargo.toml
itchy-redis-transmitter/src/: main.rs
itchy-to-redis/: Cargo.toml
itchy-to-redis/src/: main.rs
itchy-transmitter/: Cargo.toml
itchy-transmitter/src/: main.rs
ratatui-stock-ticker/: Cargo.toml  README.md
ratatui-stock-ticker/src/: main.rs
stock-ticker-tui/: Cargo.toml  LICENSE
stock-ticker-tui/src/: main.rs  reader.rs  redis_reader.rs  udp_reader.rs
