[package]
name = "stock-ticker-tui"
version = "0.1.0"
description = "A quick tui for showing stock ticks for demonstration purposes"
authors = ["Zach Burke <zach.r.burke@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
color-eyre = "0.6.3"
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
redis = { version = "0.27", features = ["streams"] }
clap = { version = "4", features = ["derive"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
